<resources>
    <string name="app_name">iMastery</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tarefas">Tarefas</string>
    <string name="title_itens">Itens</string>
    <string name="title_horarios">Horarios</string>
    <string name="title_alunos">Alunos</string>
    <string name="label_level">Level</string>
    <string name="label_points">Points</string>
    <string name="label_exp">Exp</string>
    <string name="text_nickname">NickName</string>
    <string name="num_alunos_atual">Nº Alunos atuais</string>
    <string name="num_alunos_total">Total de Alunos</string>
    <string name="lista_vazia">Lista Vazia</string>
    <string name="tarefa">Tarefas</string>
    <string name="item">Itens</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Titulo da Tarefa</string>
    <string name="task_description">Descrição da Tarefa</string>
    <string name="description_label">Descrição:</string>
    <string name="points_label">Pontos:</string>
    <string name="exp_label">Exp:</string>
    <string name="task_points_value">points_value</string>
    <string name="task_exp_value">exp_value</string>
    <string name="aula_associada_label">Aula Associada:</string>
    <string name="aula_null_value">Nenhuma aula associada.</string>
    <string name="info_title">Informações:</string>
    <string name="task_teacher_label">Professor:</string>
    <string name="task_teacher_value">Nome do Professor</string>
    <string name="btn_concluirTarefa">Concluir Tarefa</string>

    <string name="schedule_title">Dia : Horário</string>
    <string name="schedule_description">Estudar</string>
    <string name="item_title">Nome do Item</string>
    <string name="item_description">Descrição do Item</string>
    <string name="item_expiration">Validade:</string>
    <string name="delete_schedule_title">Deletar Horário</string>
    <string name="delete_schedule_text">Você tem certeza que quer deletar este horário?</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="horario_new_title">Adicionar novo horário</string>
    <string name="dia_semana_label">Dia da Semana:</string>
    <string name="segunda_value">Segunda-Feira</string>
    <string name="terca_value">Terça-Feira</string>
    <string name="quarta_value">Quarta-Feira</string>
    <string name="domingo_value">Domingo</string>
    <string name="quinta_value">Quinta-Feira</string>
    <string name="sexta_value">Sexta-Feira</string>
    <string name="sabado_value">Sabado</string>
    <string name="hora_value">Horário:</string>
    <string name="title_activity_login">iMastery</string>
    <string name="title_matricula_inexistente">Você não está matriculado</string>
    <string name="description_matricula_inexistente">Sem matrícula você não terá acesso a todos os recursos deste professor.</string>
    <string name="title_matricula_efetivada">Matrícula Efetivada</string>
    <string name="description_matricula_efetivada">Sua matrícula foi realizada com sucesso!</string>
    <string name="title_matricula_indisponivel">Matrícula indisponível</string>
    <string name="description_matricula_indisponivel">Este professor não possui vagas. Tente novamente em outro momento.</string>
    <string name="title_matricula_removida">Matrícula Removida</string>
    <string name="description_matricula_removida">Você se desmatriculou deste professor.</string>
    <string name="title_matricula_confirmation">Confirmar Matrícula</string>
    <string name="description_matricula_confirmation">Tem certeza que deseja se matricular com este professor?</string>
    <string name="title_desmatricular_confirmation">Desfazer Matrícula</string>
    <string name="description_desmatricular_confirmation">Você perderá todos os pontos que possui nesta matrícula! Tem certeza que deseja se desmatricular deste professor?</string>
    <string name="matriculado">Matriculado</string>
    <string name="desmatricular">Desmatricular</string>
    <string name="ok">OK</string>

    <!-- Strings related to login -->
    <string name="email">Email:</string>
    <string name="password">Senha:</string>
    <string name="action_sign_in">Entrar</string>
    <string name="createAccount">Criar conta</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sidebar_aluno">SidebarAlunoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="meuPerfil">Meu Perfil</string>
    <string name="professor">Professor</string>
    <string name="aulas">Aulas</string>
    <string name="config">Configurações</string>
    <string name="login_label">Entre com sua conta</string>
    <string name="logout">Log Out</string>

    <string name="insira_seus_dados">Insira seus dados</string>
    <string name="name_label">Nome Completo:</string>
    <string name="nickname_label">Nickname (Apelido):</string>
    <string name="confirmPass_label">Confirmar Senha:</string>
    <string name="matricular">Matricular</string>

    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="titulo">Título:</string>
    <string name="aluno">Aluno:</string>
    <string name="descricao">Descrição:</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="comprar_item">Comprar Item</string>

    <string name="points_insuficiente_title">Points Insuficientes</string>
    <string name="points_insuficiente_description">Você não possui points suficientes para comprar este item</string>
    <string name="item_adquirido_title">Compra efetuada</string>
    <string name="item_adquirido_description">A compra foi realizada com sucesso</string>
    <string name="tarefas_adquiridas_title">Tarefas Adquiridas</string>
    <string name="tarefas_adquiridas_description">As tarefas desta aula foram adicionadas à sua lista de tarefas com sucesso.</string>

    <string name="pre_requisito">Pré-Requisito</string>
    <string name="adquirir_tarefas">Adquirir Tarefas</string>
    <string name="tarefasList">Lista de Tarefas</string>
    <string name="nao_possui">Não Possui</string>


</resources>
