<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/meuPerfil"
            android:icon="@drawable/person_dark"
            android:title="@string/meuPerfil" />
        <item
            android:id="@+id/matriculas_menu"
            android:icon="@drawable/academy"
            android:title="@string/matriculas" />
        <item
            android:id="@+id/aulas_menu"
            android:icon="@drawable/video_dark"
            android:title="@string/aulas" />
        <item
            android:id="@+id/config_menu"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/config" />
    </group>

</menu>
