<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsAulasActivity">

    <TextView
        android:id="@+id/aula_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="Titulo da Aula"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tarefasList_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/tarefasList"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_value" />

    <TextView
        android:id="@+id/aula_description"
        android:layout_width="343dp"
        android:layout_height="87dp"
        android:layout_marginBottom="272dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_box_background"
        android:text="Descrição da Aula"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aula_title"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/professor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/professor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aula_description" />

    <TextView
        android:id="@+id/prof_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="null"
        android:maxLength="20"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/professor_label"
        app:layout_constraintStart_toStartOf="@+id/professor_label"
        app:layout_constraintTop_toBottomOf="@+id/professor_label" />

    <TextView
        android:id="@+id/pre_requisito_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/pre_requisito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aula_description" />

    <TextView
        android:id="@+id/preRequisito_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLength="20"
        android:text="@string/nao_possui"
        app:layout_constraintEnd_toEndOf="@+id/pre_requisito_label"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/pre_requisito_label"
        app:layout_constraintTop_toBottomOf="@+id/pre_requisito_label" />

    <Button
        android:id="@+id/addTarefaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="56dp"
        android:gravity="center"
        android:text="@string/criar_tarefa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/adquirirTarefasBtn"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/adquirir_tarefas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/addTarefaBtn" />

    <ListView
        android:id="@+id/listTarefas"
        android:layout_width="362dp"
        android:layout_height="145dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_box_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tarefasList_label" />

</android.support.constraint.ConstraintLayout>